--- a/newWebsite/website/package.json
+++ b/newWebsite/website/package.json
@@ -45,7 +45,7 @@
     "@types/react-dom": "^19.0.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://jvanstory.github.io/",
+  "homepage": "https://jvanstory.github.io/newWebsite/website",
   "scripts": {
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build"
