deploy updated react app

--- a/newWebsite/website/package.json
+++ b/newWebsite/website/package.json
@@ -45,10 +45,5 @@
     "@types/react-dom": "^19.0.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://jvanstory.github.io/newWebsite/website",
-  "scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-}
-
+  "homepage": "https://jvanstory.github.io/newWebsite/website"
 }
