--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "react-ui-animate": "^4.2.0",
-    "gh-pages": "^6.2.0"
+    "react-ui-animate": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +42,8 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "gh-pages": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://jvanstory.github.io/newWebsite/website"
+  "homepage": "https://jvanstory.github.io/"
 }
