--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
     "gh-pages": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/Jvanstory/jvanstory.github.io"
+  "homepage": "https://github.com/Jvanstory"
 }
